<resources>
    <string name="app_name">O-Xarid</string>
    <string name="qanaqa_kitob_izlayopsiz">Qanaqa kitob \nizlayapsiz?</string>
    <string name="kitobni_izlash">Kitobni izlash ...</string>
    <string name="hozirda_o_qilmoqda">Hozirda o`qilmoqda</string>
    <string name="bestsellerlar">Bestsellerlar</string>
    <string name="login">Tasdiqlash</string>
    <string name="ism_kiriting">Ism kiriting</string>
    <string name="login_text">Avval ro`yhatdan o`tganmisiz? Kirish!</string>
    <string name="reg">Ro`yhatdan o`tish</string>
    <string name="tv_login">Tizimga kirish</string>
    <string name="toliq_kirit">Ma\'lumotlarni to`liq kiriting</string>
    <string name="janrlar">Janrlar</string>
    <string name="izoh">Izoh:</string>
    <string name="til">Til :</string>
    <string name="varoq">Varoq :</string>
    <string name="sizda_javonga_qo_shilgan_kitob_yo_q">Sizda javonga qo`shilgan kitob yo`q</string>
    <string name="kitob_yoq">Sizda sotib olingan kitob yo`q</string>
    <string name="balans">Balans</string>
    <string name="hisobni_to_ldirish">Hisobni to`ldirish</string>
    <string name="fikrlar">Fikrlar</string>
    <string name="buyurtmalar">Buyurtmalar</string>
    <string name="chiqish">Chiqish</string>
    <string name="uzb">Uzb</string>
    <string name="rus">Кирил</string>
    <string name="karta_raqami">Karta raqami</string>
    <string name="kartaning_amal_qilish_muddati">Kartaning amal qilish muddati</string>
    <string name="miqdorni_kiriting">Miqdorni kiriting</string>
    <string name="min_money">Eng kam miqdor 1000 so`m</string>
    <string name="karta_raqam_error">Karta raqamini to`liq kiriting</string>
    <string name="vse">Hamma ma\'lumotlarni to`liq kiriting</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="kod_error">Kodni kiriting</string>
    <string name="buy">Sotib olish</string>
    <string name="o_harid">O-Harid</string>
    <string name="yo_q">Yo`q</string>
    <string name="ha_sotib_olaman">Ha Sotib olaman</string>
    <string name="xozircha_audio_kitoblar_yo_q">Xozircha audio kitoblar yo`q</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="kitoblar_qo_shilmagan">Kitoblar qo`shilmagan</string>
    <string name="sotib_olingan_kitoblar">Sotib olingan kitoblar</string>
    <string name="javon">Javon</string>
    <string name="baholang">Baholang:</string>
    <string name="fikr_bildirish">Fikr bildirish</string>
    <string name="chiqishq">Chiqish</string>
    <string name="fikr_qoldirish">Fikr qoldirish</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>