<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_back"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_44sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="9999dp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:alpha="1"
            android:outlineAmbientShadowColor="@color/main_color"
            android:outlineSpotShadowColor="@color/main_color"
            app:cardCornerRadius="9999dp"
            app:cardElevation="@dimen/_3sdp"
            tools:targetApi="p">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_4sdp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:tint="@color/main_color" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_edit"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_44sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardCornerRadius="9999dp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:alpha="1"
            android:outlineAmbientShadowColor="#FF5722"
            android:outlineSpotShadowColor="#FF5722"
            app:cardCornerRadius="9999dp"
            app:cardElevation="@dimen/_3sdp"
            tools:targetApi="p">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_4sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_editing"
                    app:tint="@color/main_color" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_user"
        android:padding="@dimen/_10sdp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0.1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_back" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/g_medium"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_balans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:outlineAmbientShadowColor="@color/main_color"
        android:outlineSpotShadowColor="@color/main_color"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:targetApi="p">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/g_regular"
                    android:text="@string/balans"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_13ssp" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progress_bar"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="loading.json"
                    app:lottie_loop="true"
                    app:lottie_speed="2" />


            </LinearLayout>


            <TextView
                android:id="@+id/tv_balans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/g_regular"
                android:text="0 so`m"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_15ssp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_hisob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_1sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_gradient">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/g_regular"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/hisobni_to_ldirish"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_rus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_26sdp"
        android:visibility="gone"
        android:text="@string/rus"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@id/applyModeSwitch"
        app:layout_constraintTop_toBottomOf="@id/cv_balans" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/applyModeSwitch"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="4dp"
        android:checked="true"
        android:clickable="false"
        android:focusable="false"
        android:thumb="@drawable/thumb_selector"
        app:layout_constraintBottom_toBottomOf="@id/tv_rus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_rus"
        app:track="@drawable/track_selector" />

    <TextView
        android:id="@+id/tv_uzb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26sdp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/uzb"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@id/applyModeSwitch"
        app:layout_constraintTop_toBottomOf="@id/cv_balans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cv_balans">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_buyurtmalar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/g_regular"
                    android:text="@string/buyurtmalar" />

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:rotation="180"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_fikrlar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/g_regular"
                    android:text="@string/fikrlar" />

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:rotation="180"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_chiqish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/g_regular"
                    android:text="@string/chiqish" />

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:rotation="180"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>