<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rooot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.CardFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_back"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_44sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="9999dp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:alpha="1"
            android:outlineAmbientShadowColor="@color/main_color"
            android:outlineSpotShadowColor="@color/main_color"
            app:cardCornerRadius="9999dp"
            app:cardElevation="@dimen/_3sdp"
            tools:targetApi="p">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_4sdp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:tint="@color/main_color" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_karta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/g_regular"
        android:text="@string/karta_raqami"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_back" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/edittext_back"
        android:hint="################"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        app:keep_hint="true"
        app:layout_constraintTop_toBottomOf="@id/tv_karta"
        app:mask="#### #### #### ####" />

    <TextView
        android:id="@+id/tv_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/g_regular"
        android:text="@string/kartaning_amal_qilish_muddati"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/card_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/edittext_back"
        android:hint="1023"
        android:inputType="date"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_validation"
        app:mask="##/##" />


<!--    <TextView-->
<!--        android:id="@+id/tv_phone_number"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_16sdp"-->
<!--        android:layout_marginTop="@dimen/_16sdp"-->
<!--        android:fontFamily="@font/g_regular"-->
<!--        android:text="@string/kartaga_bog_langan_telefon_raqamini_kiriting"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/card_validation" />-->

<!--    <br.com.sapereaude.maskedEditText.MaskedEditText-->
<!--        android:id="@+id/card_phone_number"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_16sdp"-->
<!--        android:layout_marginTop="@dimen/_8sdp"-->
<!--        android:layout_marginEnd="@dimen/_16sdp"-->
<!--        android:background="@drawable/edittext_back"-->
<!--        android:hint="931234567"-->
<!--        android:inputType="phone"-->
<!--        android:padding="@dimen/_10sdp"-->
<!--        app:keep_hint="true"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"-->
<!--        app:mask="+998 ## ### ####" />-->

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/g_regular"
        android:text="@string/miqdorni_kiriting"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_validation" />

    <EditText
        android:id="@+id/et_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/edittext_back"
        android:hint="0"
        android:inputType="number"
        android:maxLength="8"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_money" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_30sdp"
        android:visibility="gone"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toTopOf="@id/cv_hisob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_money"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        app:lottie_speed="2" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_hisob"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_gradient">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/g_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/hisobni_to_ldirish"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>