<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_o_harid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/g_medium"
            android:text="@string/o_harid"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/tv_o_harid"
            app:layout_constraintTop_toTopOf="@id/tv_o_harid"
            app:layout_constraintBottom_toBottomOf="@id/tv_o_harid"
            android:layout_marginStart="@dimen/_16sdp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true"
            app:lottie_speed="2" />


        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/g_medium"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/_16sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_o_harid" />


        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/g_bold"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="Shu kitobni sotib olmoqchiligingizni tasdiqlang?"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_44sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text"
            app:layout_goneMarginStart="@dimen/_16sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#C4787B8E"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/g_regular"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/yo_q"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_44sdp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text"
            app:layout_goneMarginStart="@dimen/_16sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_gradient"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/g_regular"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/ha_sotib_olaman"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>